Added a number of methods to help filter through pages, avoiding external links, PDFs, images and a number of other sidetracks

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+full_config.json
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -90,4 +92,3 @@ ENV/
 
 # Rope project settings
 .ropeproject
->>>>>>> c9373359c222633d9331ed833069b9de0a625ba9
