Added some console logging and other fixes

--- a/full_config.json
+++ b/full_config.json
@@ -3,6 +3,7 @@
     "http://www.albagroup.it/en/home/",
     "http://www.antiba.it",
     "http://www.ascotspa.it",
+    "http://www.a-tema.com/",
     "http://www.ausonia.it",
     "http://www.bcn.it",
     "http://www.conceriabello.it",
@@ -12,43 +13,50 @@
     "http://www.carismaleather.it",
     "http://www.conceriacerbiatto.it",
     "http://www.chiorinotechnology.com",
-    "http://www.conceria800.it/",
+    "http://www.conceria800.it",
     "http://www.skiver.it",
     "http://www.conceriaitalia.com",
     "http://www.conceriaconti.biz/",
     "http://www.coripel.it",
     "http://www.gruppoperetti.com",
     "http://www.laquerce.it",
-    "http://www.mpg.it;www.mpgtannery.eu",
-    "http://www.conceriadallabarba.eu/",
+    "http://www.mpg.it",
+    "http://www.mpgtannery.eu",
+    "http://www.conceriadellabarba.com",
     "http://www.gruppodani.it",
     "http://www.ecopell.it",
+    "http://www.effegitannery.it",
     "http://www.conceriaemmedue.com/",
     "http://www.fapel.com",
     "http://www.conceriaferrero.com",
     "http://www.gaiera.it",
+    "http://www.galileosrl.eu/",
     "http://www.guanaco.it",
     "http://www.incas.it",
     "http://www.industriaconciariaeuropa.it",
+    "http://www.italcuoiointernational.it",
     "http://www.conceriaitaliana.it",
     "http://www.conceriajolly.it/",
-    "http://www.conceriakara.com http://www.karagroup.it/",
+    "http://www.conceriakara.com",
     "http://www.concerialaba.it",
     "http://www.laperlaazzurra.com",
     "http://www.concerialaveneta.com",
+    "http://www.libertytannery.it",
     "http://www.lostivale.it",
     "http://www.d-co-consorzio.it",
     "http://conceriam2.com/",
-    "http://www.marbella.it; http://www.conceriamarbella.it/",
+    "http://conceriamapartners.com/",
+    "http://www.marbella.it",
     "http://www.marcatoro.it",
+    "http://www.conceriastefanellisrl.it",
     "http://www.conceriamasini.it/",
     "http://www.masonispa.com",
     "http://www.mb3.it",
     "http://www.conceriamiura.it",
     "http://www.montana.it",
     "http://www.montebello-tannery.it",
-    "http://www.newpelli.com/ (?)",
-    "https://www.concerianuovaantilope.it",
+    "http://www.newpelli.com/",
+    "http://www.signorini.it/nuova antilope",
     "http://www.nuovaetruria.it",
     "http://www.nuovaosba.it",
     "http://www.nutiivo.it",
@@ -58,19 +66,46 @@
     "http://www.perpel.com",
     "http://www.pistolesisrl.it",
     "http://www.prealpinatannery.com",
-    "http://www.mastrotto.com/ ; http://mastrottobrasil.com/ ; http://www.mastrottoindonesia.com/",
+    "http://www.conceriapriante.com",
+    "http://www.conceriaprima.com",
+    "http://www.mastrotto.com/",
     "http://www.russodicasandrino.com",
+    "http://www.samanta.com",
     "http://www.scabrenta.it",
-    "http://www.settebelloconceria.it/IT/ambiente.html",
+    "http://www.settebelloconceria.it",
     "http://www.sicerp.it",
     "http://www.montiemonti.it",
     "http://www.sirp.com",
     "http://www.superior.it",
     "http://www.conceria-tari.com",
-    "http://www.conceriamangusta.it/en/",
-    "http://www.conceriatrend.com"
+    "http://www.tecnologiemangusta.com",
+    "http://www.conceriatrend.com",
+    "http://www.conceriatris.it",
+    "http://www.tuscanialeather.it",
+    "http://www.umbertorusso.it",
+    "http://www.valoriconceria.com/",
+    "http://www.vecchiatoscana.com",
+    "http://www.conceriavictoria.it",
+    "http://www.gbcuoio.com",
+    "http://www.conceriavolpiana.it",
+    "http://www.conceriawalpier.it",
+    "http://www.zabri.it",
+    "http://www.conceriazonta.com/"
   ],
   "keywords": [
-    "100%"
+    "forest",
+    "sustainab(ility)?",
+    "environment",
+    "source",
+    "origin",
+    "proven(ance)?(nient)?",
+    "trace(ability)?",
+    "supply chain",
+    "chain of custody",
+    "carbon",
+    "emission",
+    "14001",
+    "EMAS",
+    "LWG"
   ]
 }
